add aws docker run

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,17 @@ after_success:
   - docker push szaszolak/multi-nginx 
   - docker push szaszolak/multi-server
   - docker push szaszolak/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env:  MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-577205326117
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
